Cycles is not rendering direct light with volumetrics, only indirect (builds from buildbot after 2.71). 2.71 renders are ok) #40987

Closed
opened 2014-07-08 00:42:01 +02:00 by Piotr Rogowski · 18 comments

System Information
Lenovo Y580 Intel Core i7-3630QM CPU, 15,6 GiB RAM, Nvidia GeForce GTX 660M (GK107M), Linux Mint 17 64-bit
Blender Version
Broken: Blender 2.71 from buildbot (Hash 4299b00) (and several earlier versions)
Worked: Blender 2.71 stable (Hash: 9337574)
Short description of error
Cycles is not rendering direct light with volumetrics, only indirect.
Exact steps for others to reproduce the error
Just starting with the default cube, add to it Object/quick effects/quick smoke, Add a volume scatter shader to created domain, with attribute node with density parameter as density of the shader, Simulate several frames, F12 for render.

**System Information** Lenovo Y580 Intel Core i7-3630QM CPU, 15,6 GiB RAM, Nvidia GeForce GTX 660M (GK107M), Linux Mint 17 64-bit **Blender Version** Broken: Blender 2.71 from buildbot (Hash 4299b00) (and several earlier versions) Worked: Blender 2.71 stable (Hash: 9337574) **Short description of error** Cycles is not rendering direct light with volumetrics, only indirect. **Exact steps for others to reproduce the error** Just starting with the default cube, add to it Object/quick effects/quick smoke, Add a volume scatter shader to created domain, with attribute node with density parameter as density of the shader, Simulate several frames, F12 for render.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Rogo

Added subscriber: @Rogo
Author

Sorry for that, Didnt know how to edit previous posts. Adding some files according to this bug.
Thank You!

wrong.jpg

correct.jpg

untitled2.blend

Sorry for that, Didnt know how to edit previous posts. Adding some files according to this bug. Thank You! ![wrong.jpg](https://archive.blender.org/developer/F97034/wrong.jpg) ![correct.jpg](https://archive.blender.org/developer/F97035/correct.jpg) [untitled2.blend](https://archive.blender.org/developer/F97038/untitled2.blend)

Added subscriber: @Ace_Dragon

Added subscriber: @Ace_Dragon

You might want to simplify this a little.

Instead of using a smoke object, just add a volumetric material to the cube so verify as to whether or not the issue might be specific to smoke rendering.

Also, if the lamp size is small, you might have trouble getting any sort of lighting on it even if using MIS, though regressions in terms of direct lighting abilities are always possible.

You might want to simplify this a little. Instead of using a smoke object, just add a volumetric material to the cube so verify as to whether or not the issue might be specific to smoke rendering. Also, if the lamp size is small, you might have trouble getting any sort of lighting on it even if using MIS, though regressions in terms of direct lighting abilities are always possible.
Author

Thank you ace_dragon.
Yes, simplified scene reproduces same bug. Just connect a volume scatter shader to default cube (default scene), removing diffuse one. No direct light. Lamp size makes no difference.
Blender 2.71 render is all fine, later versions are not.

Thank you ace_dragon. Yes, simplified scene reproduces same bug. Just connect a volume scatter shader to default cube (default scene), removing diffuse one. No direct light. Lamp size makes no difference. Blender 2.71 render is all fine, later versions are not.
Author

"No direct light" I mean "no direct light" noticeable still in render.
Sorry for flooding.

"No direct light" I mean "no direct light" noticeable still in render. Sorry for flooding.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Thomas Dinges self-assigned this 2014-07-08 02:18:13 +02:00
  1. Sun Lamps are not supported, as they are infinitely far away.

  2. In the post 2.71 builds, Volume Bounces default to 0, set it to 1, then it should look like the 2.71 release.

1) Sun Lamps are not supported, as they are infinitely far away. 2) In the post 2.71 builds, Volume Bounces default to 0, set it to 1, then it should look like the 2.71 release.
Author

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Author

@ThomasDinges This is bug due to any type of light in this case. I dont use sun lamps. World has no volumetrics. Please download my .blend file and test it. Volume Bounces settings make no differences.

@ThomasDinges This is bug due to any type of light in this case. I dont use sun lamps. World has no volumetrics. Please download my .blend file and test it. Volume Bounces settings make no differences.

I downloaded untitled2.blend and there is a Sun Lamp in it. Switch to Point Lamp, increase strength it works fine!

I downloaded untitled2.blend and there is a Sun Lamp in it. Switch to Point Lamp, increase strength it works fine!
Author

Ok. I changed light to point and increased its strenhgt. Its working. Still I dont understand why sun does not work with volumes like such domain. I understand why it doesnt work with world volume (pretty reasonable -light at infinite distance and volumetric world) but why doesnt it work here? Volume domain has its thickness, and it should be considered in all calculations. Why is the sunlight in this case???

BTW @ThomasDinges, You are doing such a great job on Cycles!

Ok. I changed light to point and increased its strenhgt. Its working. Still I dont understand why sun does not work with volumes like such domain. I understand why it doesnt work with world volume (pretty reasonable -light at infinite distance and volumetric world) but why doesnt it work here? Volume domain has its thickness, and it should be considered in all calculations. Why is the sunlight in this case??? BTW @ThomasDinges, You are doing such a great job on Cycles!

You can see for yourself if you 'build' the sun into the environmental light and make it a really small source.

Cycles is a unidirectional pathtracer and that combined with a volume means it will be very hard to illuminate the surface with a source that small.

It's kind of unfortunate really because it means we still have to use stacked cards, the motion blur workaround, or the old internal engine if we want real volumetric cloud and smoke effects in outdoor scenes without tricky compositing tricks, and I'm not sure if there's any papers covering the topic of successfully lighting a cloud from a distant source without a sort of shading cache.

You can see for yourself if you 'build' the sun into the environmental light and make it a really small source. Cycles is a unidirectional pathtracer and that combined with a volume means it will be very hard to illuminate the surface with a source that small. It's kind of unfortunate really because it means we still have to use stacked cards, the motion blur workaround, or the old internal engine if we want real volumetric cloud and smoke effects in outdoor scenes without tricky compositing tricks, and I'm not sure if there's any papers covering the topic of successfully lighting a cloud from a distant source without a sort of shading cache.

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Actually this is a bug, and was introduced after the 2.71 release, working on a fix atm: D639

Actually this is a bug, and was introduced after the 2.71 release, working on a fix atm: [D639](https://archive.blender.org/developer/D639)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
The issue has been fixed now: https://developer.blender.org/rBe35845d37cd9ff9ab287eb8250476de687cca832
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40987
No description provided.