Fix T40987: Distant Lamps have no influence on Volumes.

Differential Revision: https://developer.blender.org/D639